tests/golden/err-non-entry-top-expr/expected_error.txt
error: エントリポイント以外のファイルのトップレベルに式は書けません
 --> page.clum:5:1
  |
5 | Recipe
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ トップレベルの式を実行できるのはエントリポイントだけです。値が必要なら `名前 = 式` で束縛してください
